# RoboChess

./: Cargo.toml  Langsamdrian_deleteme  README.md  branch.txt  testet.txt
src/: chess_tiles.rs  example_websocket.rs  gripper.java  gripper.rs  main.rs  robot.rs  webserver.rs
src/webserver/: websocket_server.rs  websocket_session.rs
src/webserver/static/: chessboard.html  index.html
src/webserver/static/css/: styles.css  test_css.css
src/webserver/static/js/: app.js  pieces.js  test_js.js
webapp/: animation.js  app.js  chessboard.html  index.html  pieces.js  quellen.txt  startpage.css  styles.css
