[package]
name = "roboter_arm_projekt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
actix-web = "4.2.1"
actix-files = "0.6.2"
actix-web-actors = "4.1.0"
actix = "0.13.0"
websockets = "0.3.0"
rand = "0.8.5"
